src/snapshots/gpui_markup__codegen__tests__div_with_multiple_children.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div { \"First\", \"Second\", } })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div();
        let __child = "First";
        let __gpui_markup_element = gpui::ParentElement::child(
            __gpui_markup_element,
            __child,
        );
        let __child = "Second";
        let __gpui_markup_element = gpui::ParentElement::child(
            __gpui_markup_element,
            __child,
        );
        __gpui_markup_element
    }
}
