src/snapshots/gpui_markup__codegen__tests__div_with_multiple_flags.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div @[flex, flex_col] {} })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div().flex().flex_col();
        __gpui_markup_element
    }
}
