src/snapshots/gpui_markup__codegen__tests__div_with_single_child.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div { \"Hello\" } })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div();
        let __child = "Hello";
        let __gpui_markup_element = gpui::ParentElement::child(
            __gpui_markup_element,
            __child,
        );
        __gpui_markup_element
    }
}
