src/snapshots/gpui_markup__codegen__tests__expression_element.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { Container::new(title) {} })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = Container::new(title);
        __gpui_markup_element
    }
}
