src/snapshots/gpui_markup__codegen__tests__expression_element_with_attributes.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { Container::new(title) @[flex] {} })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = Container::new(title).flex();
        __gpui_markup_element
    }
}
