src/snapshots/gpui_markup__codegen__tests__expression_element_with_children.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { Container::new(title) { \"Content\" } })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = Container::new(title);
        let __child = "Content";
        let __gpui_markup_element = gpui::ParentElement::child(
            __gpui_markup_element,
            __child,
        );
        __gpui_markup_element
    }
}
