src/snapshots/gpui_markup__codegen__tests__method_call_no_args.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div { .flex(), } })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div();
        let __gpui_markup_element = __gpui_markup_element.flex();
        __gpui_markup_element
    }
}
