src/snapshots/gpui_markup__codegen__tests__method_with_generics.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div { .map::<Div, _>(|d| d), } })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div();
        let __gpui_markup_element = __gpui_markup_element.map::<Div, _>(|d| d);
        __gpui_markup_element
    }
}
