src/snapshots/gpui_markup__codegen__tests__multi_value_attribute.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div @[when: (is_visible, |d| d.flex())] {} })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div().when(is_visible, |d| d.flex());
        __gpui_markup_element
    }
}
